--- a/MODULE 1-HTML 5/style.css
+++ b/MODULE 1-HTML 5/style.css
@@ -27,7 +27,6 @@ body {
 }
 
 nav {
-  background-color: var(--primary-color);
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   
 }
@@ -41,7 +40,7 @@ nav ul {
 }
 
 nav a {
-  color: white;
+  color: black;
   text-decoration: none;
   font-weight: 600;
   transition: color 0.3s ease;
@@ -49,7 +48,7 @@ nav a {
 
 nav a:hover,
 nav a:focus {
-  color: var(--secondary-color);
+  font-weight: bold;
   outline: none;
 }
 #welcomeBanner {
@@ -174,8 +173,8 @@ form textarea:focus {
 }
 
 button,form button {
-  background-color: var(--primary-color);
-  color: white;
+  background-color: aquamarine;
+  color: black;
   border: none;
   padding: 0.75rem 1.5rem;
   border-radius: 8px;
